Solve infra